[package]
name = "rscad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
truck-platform = "0.3.0"
egui_wgpu_backend = "0.14"
chrono = "0.4"
pollster = "0.2"
egui = "0.15"
epi = "0.15"
egui_winit_platform = "0.12"
wgpu = "0.11"
winit = "0.26"
egui_demo_lib = "0.15"
ropey = "1.0.0"
dxf = "0.5.0"
clap = "3.2.8"
